--- a/404.html
+++ b/404.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Page Not Found</title>
+    <meta charset="UTF-8" />
+    <title>Redirecting…</title>
     <script>
-      sessionStorage.redirect = location.href;
+      sessionStorage.redirect = location.pathname + location.search + location.hash;
+      location.href = "/";
     </script>
-    <meta http-equiv="refresh" content="0;URL='/'" />
   </head>
-  <body></body>
+  <body>
+    <p>Redirecting…</p>
+  </body>
 </html>
