--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
             history.replaceState(null, null, redirect);
           }
         })();
-      </script>
+    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H9EY6S7SQR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-H9EY6S7SQR');
+    </script>
   </head>
   <body>
     <div id="root"></div>
